--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="content">
 					<header>
 						<h2>Мои работы</h2>
-						<p>Ниже вы можете увидеть часть моих работ, чтобы посмотреть прочие работы можно перейти по ссылке в меню навигации.</p>
+						<p>Ниже вы можете ознакомиться с частью моих работ, чтобы увидеть больше, можно перейти по ссылке в меню навигации выше</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -101,12 +101,8 @@
 				<div class="content">
 					<header>
 						<h2>Связь</h2>
-						<p>Напишите мне привет если желаете заказать работу или же узнать некоторые секреты производства</p>
+						<p>Напишите мне в любой социальной сети, для сотрудничества или приобретения моих работ</p>
 					</header>
-					<div class="box">
-						<p>Для связи со мной лучше всего использовать вот эту почту, достаточно нажать <a href="mailto:mail@htmlacademy.ru">cюда</a><br />
-						Либо же, написать мне в <a href="https://t.me/uffn_v" class="icon brands fa-telegram"></a> или же в <a target="_blank" href="https://wa.me/+7903xxxxxxx" class="icon brands fa-whatsapp"></a></p>
-					</div>
 				</div>
 			</section>
 
@@ -115,6 +111,8 @@
 
 				<!-- Icons -->
 					<ul class="icons">
+						<li><a href="mailto:mail@htmlacademy.ru" class="icon brands fa-google-plus"><span class="label"></span></a></li>
+						<li><a target="_blank" href="https://wa.me/+7903xxxxxxx" class="icon brands fa-whatsapp"><span class="label"></span></a></li>
 						<li><a href="https://t.me/uffn_v" class="icon brands fa-telegram"><span class="label"></span></a></li>
 						<li><a href="https://www.instagram.com/m.w.y.l?igsh=OGQ5ZDc2ODk2ZA==" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
